--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
       matrix:
         dotnet-version: ['2.1', '2.2', '3.0', '3.1', '5.0']
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      # - name: Checkout
+      #   uses: actions/checkout@v2
       - name: Clear toolcache
         shell: pwsh
         run: |
