--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,9 @@ jobs:
               Move-Item -Path $srcPath -Destination $dstPath
               }
             }
+      - uses: actions/checkout@v2
       - name: Setup dotnet ${{ matrix.dotnet-version }}
-        uses: ./
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Check installed version
