--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -2,14 +2,14 @@ name: "run commit check for pr"
 on:
   push:
     branches:
-      - master
-
+      - fakebranch
+#
 jobs:
   setup-version:
     runs-on: windows-latest
     strategy:
       matrix:
-        dotnet-version: ['2.1', '2.2', '3.0', '3.1', '5.0']
+        dotnet-version: ['3.1', '5.0']
     steps:
       # - name: Checkout
       #   uses: actions/checkout@v2
