--- a/.github/workflows/test-msbuild-nuget.yml
+++ b/.github/workflows/test-msbuild-nuget.yml
@@ -10,12 +10,20 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v2
+      
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
         with:
           vs-version: '16.0'
+      
       - name: test mssbuild is present 
         run: msbuild --version
 
-    #  - name: Setup NuGet.exe for use with actions
-    #   uses: NuGet/setup-nuget@v1.0.5
+      - name: Setup NuGet.exe for use with actions
+        uses: NuGet/setup-nuget@v1.0.5
+
+      - name: restore supersimple
+        run: nuget restore super-simple-csproj
+        
+        
